jdk 9 http client fixes and cleanup